[package]
name = "blnvim-ng"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "blnvim-ng — next-generation Rust-native Neovim distribution by pleme-io"
homepage = "https://github.com/pleme-io/blnvim-ng"
repository = "https://github.com/pleme-io/blnvim-ng"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "distribution", "ide", "editor"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
